# AnagramGenerator

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
anagram_generator/: anagramSolver.py
find.egg-info/: PKG-INFO
