[metada]
name = anagram_machine
version = 1.0.0
author = Joseph Busayo Jayeoba
description = A libray tha generates the anagram of any combination of english letters
long_description = file: README.md
url = https://github.com/JosephBusayo/anagram_machine
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OSI Independent


[options]
packages = find
python_requires = >= 3.5
include_package_data = True